refactor: update requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,15 +12,20 @@ django-environ==0.12.0
 django-filter==25.1
 django-formtools==2.5.1
 django-json-widget==2.0.1
+django-pandas==0.6.7
 django-ratelimit==4.1.0
 django-weasyprint==2.4.0
 django-widget-tweaks==1.5.0
+et_xmlfile==2.0.0
 fonttools==4.58.4
 idna==3.10
 lxml==5.4.0
 mercadopago==2.2.3
 mysqlclient==2.2.7
+numpy==2.3.2
 ofxparse==0.21
+openpyxl==3.1.5
+pandas==2.3.2
 pdfminer.six==20250506
 pdfplumber==0.11.7
 pillow==11.1.0
@@ -31,6 +36,7 @@ pypdfium2==4.30.1
 pyphen==0.17.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2025.2
 requests==2.32.3
 six==1.17.0
 soupsieve==2.7
